# fnox

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CRUSH.md  Cargo.toml  Cross.toml  ONEPASSWORD.md  README.md  aube-lock.yaml  build.rs  communique.toml  example.fnox.toml  flake.nix  fnox.toml  fnox.usage.kdl  hk.pkl  mise.toml  package-lock.json  package.json  settings.toml
.buildkite/: pipeline.yml
.buildkite/scripts/: bats-filter.sh  install-mise.sh  redact.sh  setup-age.sh  setup-keychain.sh  setup-services.sh
.cargo/: config.toml
.github/: renovate.json
.github/claude-code/: package-lock.json  package.json
.github/workflows/: auto-merge-release.yml  autofix.yml  ci.yml  docs.yml  release-plz.yml  release.yml  zizmor.yml
26/0569e91552/: metadata.json
26/0569e91552/0/: content_hash.txt  full.jsonl  metadata.json  (+1 more)
3c/7aecb0ec0e/: metadata.json
crates/fnox-core/: Cargo.toml  settings.toml
crates/fnox-core/providers/: foks.toml  keepass.toml  proton-pass.toml  vault.toml
crates/fnox-core/src/: config.rs  config_path.rs  credential_command.rs  env.rs  keyring_store.rs  lease.rs  lib.rs  library.rs  pulumi_esc_api.rs  secret_resolver.rs  settings.rs
crates/fnox-core/src/lease_backends/: github_oauth.rs  mod.rs  pulumi_esc.rs  vault.rs
crates/fnox-core/src/providers/: age.rs  fido2.rs  foks.rs  gcp_sm.rs  keepass.rs  keychain.rs  mod.rs  proton_pass.rs  pulumi_esc.rs  resolver.rs
docs/: index.md
docs/.vitepress/: config.mjs  stars.data.ts
docs/cli/: activate.md  check.md  commands.json  completion.md  deactivate.md  doctor.md  edit.md  exec.md  export.md  get.md  import.md  index.md  init.md  lease.md  list.md  profiles.md  provider.md  remove.md  scan.md  set.md  sponsors.md  sync.md  version.md
docs/guide/: daemon.md  import-export.md  leases.md  mcp.md  profiles.md  quick-start.md  real-world-example.md  secret-refs.md  shell-integration.md  sync.md
docs/leases/: cloudflare.md  command.md  gcp-iam.md  github-app.md  github-oauth.md  pulumi-esc.md  vault.md
docs/providers/: age-2fa.md  age.md  aws-kms.md  aws-ps.md  aws-sm.md  bitwarden-sm.md  bitwarden.md  fido2.md  foks.md  gcp-kms.md  infisical.md  keepass.md  overview.md  password-store.md  proton-pass.md  pulumi-esc.md  vault.md  yubikey.md
docs/public/: schema.json  site.webmanifest
docs/reference/: configuration.md  environment.md
fe/b81ae5d175/: metadata.json
mise-tasks/: gen-release-notes  gen-release-summary  release-plz
providers/: 1password.toml  age-2fa.toml  age.toml  aws-kms.toml  aws-ps.toml  aws-sm.toml  aws-sts.toml  azure-kms.toml  azure-sm.toml  bitwarden-sm.toml  bitwarden.toml  fido2.toml  gcp-kms.toml  gcp-sm.toml  infisical.toml  keepass.toml  keychain.toml  password-store.toml  plain.toml  protonpass.toml  pulumi-esc.toml  vault.toml  yubikey.toml
src/: auth_prompt.rs  cache.rs  config.rs  config_resolver.rs  daemon.rs  env.rs  error.rs  hook_env.rs  http.rs  lease.rs  lib.rs  library.rs  main.rs  mcp_server.rs  pulumi_esc_api.rs  secret_resolver.rs  settings.rs  source_registry.rs  spanned.rs
src/commands/: activate.rs  cache.rs  check.rs  ci_redact.rs  config_files.rs  daemon.rs  deactivate.rs  doctor.rs  edit.rs  exec.rs  export.rs  get.rs  hook_env.rs  import.rs  init.rs  lease.rs  list.rs  mcp.rs  mod.rs  profiles.rs  reencrypt.rs  remove.rs  scan.rs  schema.rs  set.rs  sponsors.rs  sync.rs  tui.rs
src/lease_backends/: aws_sts.rs  azure_token.rs  cloudflare.rs  command.rs  gcp_iam.rs  github_app.rs  mod.rs  pulumi_esc.rs  vault.rs
src/providers/: age.rs  age_2fa.rs  aws_kms.rs  aws_ps.rs  aws_sm.rs  aws_sts.rs  azure_kms.rs  azure_sm.rs  bitwarden.rs  bitwarden_sm.rs  doppler.rs  fido2.rs  gcp_kms.rs  gcp_sm.rs  hw_encrypt.rs  infisical.rs  keepass.rs  keychain.rs  mod.rs  onepassword.rs  password_store.rs  passwordstate.rs  plain.rs  proton_pass.rs  protonpass.rs  pulumi_esc.rs  resolved.rs  resolver.rs  secret_ref.rs  vault.rs  yubikey.rs  yubikey_usb.rs
src/shell/: mod.rs  nushell.rs  pwsh.rs
src/tui/: app.rs  ui.rs
test/: BITWARDEN_TESTING.md  VAULT_TESTING.md  age.bats  aws_kms.bats  aws_parameter_store.bats  aws_secrets_manager.bats  aws_sts.bats  azure_kms.bats  azure_secrets_manager.bats  base64_roundtrip.bats  bitwarden.bats  bitwarden_sm.bats  config-ordering.bats  config_hierarchy_set.bats  config_recursion.bats  daemon.bats  docker-compose.bitwarden-ci.yml  docker-compose.bitwarden.yml  dry_run.bats  edit.bats  env_mode.bats  export_if_missing.bats  export_recursion.bats  file_secrets.bats  gcp_secret_manager.bats  global_config.bats  hook_env_plain_inheritance.bats  hook_env_provider_inheritance.bats  if_missing_priority.bats  import.bats  infisical.bats  json_secrets.bats  keepass.bats  keychain.bats  lease_azure_token.bats  lease_command.bats  lease_gcp_iam.bats  lease_github_app.bats  lease_github_oauth.bats  lease_vault.bats  (+18 more)
test/test_helper/: common_setup.bash
(+25 files in other folders)
