[package]
name = "fnox-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Provider library and core types for fnox"
readme = "../../README.md"

[dependencies]
aes-gcm = { workspace = true }
age = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
atty = { workspace = true }
aws-config = { workspace = true }
aws-sdk-kms = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
aws-sdk-ssm = { workspace = true }
aws-sdk-sts = { workspace = true }
azure_core = { workspace = true }
azure_identity = { workspace = true }
azure_security_keyvault_keys = { workspace = true }
azure_security_keyvault_secrets = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
demand = { workspace = true }
dirs = { workspace = true }
fslock = { workspace = true }
futures = { workspace = true }
gcp_auth = { workspace = true }
google-cloud-kms = { workspace = true }
google-cloud-secretmanager-v1 = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
indexmap = { workspace = true }
jsonwebtoken = { workspace = true }
keepass = { workspace = true }
keyring-core = { workspace = true }
libloading = { workspace = true }
miette = { workspace = true }
pluralizer = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_spanned = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
shellexpand = { workspace = true }
strsim = { workspace = true }
strum = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
which = { workspace = true }
xx = { workspace = true }

# ctap-hid-fido2 → hidapi → libudev cannot be statically linked on musl,
# so the FIDO2 provider is excluded from musl builds.
[target.'cfg(not(target_env = "musl"))'.dependencies]
ctap-hid-fido2 = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { workspace = true }
dbus-secret-service-keyring-store = { workspace = true }
openssl-sys = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { workspace = true }

[build-dependencies]
indexmap = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
toml_edit = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

# -----------------------------------------------------------------------
# Cargo features
# -----------------------------------------------------------------------
#
# Each provider can be opted out of with `--no-default-features` plus the
# specific features the install needs. Downstream crates that embed
# `fnox-core` (e.g., the `fnox` binary in this workspace, or third-party
# integrations) gain ~few-MiB binary-size wins by skipping unused
# providers — provider crates pull large transitive dep chains (AWS SDK,
# Google Cloud SDK, Azure SDK, hidapi/libudev for FIDO2, libdbus for the
# Linux keyring backend).
#
# Adding a new feature here also requires:
#   1. Setting `cargo_feature = "<name>"` in the provider's
#      `crates/fnox-core/providers/<name>.toml` descriptor so the build
#      script cfg-gates the generated registration code.
#   2. Moving the corresponding dep(s) below to `optional = true`
#      (currently none of them are — see the keepass commit for the
#      first migration).
#   3. Wrapping the provider's `pub mod <name>;` in
#      `crates/fnox-core/src/providers/mod.rs` with the same
#      `#[cfg(feature = "...")]`.
#
# This [features] block is intentionally introduced before any deps are
# moved to optional, so reviewers can see the proposed feature surface
# in isolation. With every feature still pulling its deps unconditionally,
# `cargo build --no-default-features` produces the same artifact as
# `cargo build` today; the size savings land as each provider is migrated
# in follow-up work.
[features]
default = ["all-providers"]

# Convenience meta-feature: enables every provider. Equivalent to
# pre-feature behavior; the default unless an embedder opts out.
all-providers = ["keepass"]

# Per-provider features. Empty for now; populated as each provider
# moves to `optional = true` deps in follow-up commits.
keepass = []
